--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
+  gap: 20px;
 }
 
 .icon {
@@ -33,6 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
 }
 
 .close-button {
@@ -48,6 +53,40 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  max-width: 24px;
+}
+
+.button-container{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.content-cols{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+}
+
+.header{
+  display: flex;
+  font-weight: bold;
+  font-size: large;
+  flex-direction: column;
+}
+
+.header-row{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+  flex: 1;
+}
+
+.button-container{
+  display: flex;
+  justify-content: flex-start;
+  gap: 5px;
 }
 
 button {
